# iyashi

./: .env.example  .gitignore  README.md  animal.py  app.json  db.py  docker-compose.yml  response.py
app/: .env.example  Dockerfile  animal.py  const.py  db.py  file.py  pyproject.toml  requirements.txt  response.py  run.py  slackbot_settings.py
app/scripts/: add.py  delete.py
