[tool.poetry]
name = "iyashi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slackbot = "^1.0.0"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"
Pillow = "^8.0.1"
torchvision = "^0.8.1"
torch = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
